# rust-screenshot

./: Cargo.toml  README.md
src/: main.rs
