[package]
name = "cc"
version = "0.1.0"
edition = "2024"

[dependencies]
# 跨平台截图
# screenshot-rs = "0.1.3"
screenshots = "0.8.10"
# 图形界面和窗口
egui = "0.24.1"
eframe = "0.24.1"
# 图像处理
image = "0.24.7"
# 剪贴板支持
arboard = "3.2.0"
# 文件保存对话框
rfd = "0.11.4"
# 添加 winapi 依赖及其特性
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
